--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             }
         }
 		</style>
-		<script src="UI/libs/jquery.js" type="text/javascript"></script>
-		<script src="UI/libs/jquery.tmpl.min.js" type="text/javascript"></script>
-		<script src="UI/libs/jquery-ui.min.js" type="text/javascript"></script>
-		<link href="UI/libs/jquery-ui.min.css" rel="stylesheet"></link>
+		<script src="libs/jquery.js" type="text/javascript"></script>
+		<script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
+		<script src="libs/jquery-ui.min.js" type="text/javascript"></script>
+		<link href="libs/jquery-ui.min.css" rel="stylesheet"></link>
 		
 		<script src="libs/lodash.min.js"></script>
 		<script src='libs/anonymousassertion.js'></script>
