--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             }
         }
 		</style>
-		<script src="libs/jquery.js" type="text/javascript"></script>
-		<script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
-		<script src="libs/jquery-ui.min.js" type="text/javascript"></script>
-		<link href="libs/jquery-ui.min.css" rel="stylesheet"></link>
+		<script src="UI/libs/jquery.js" type="text/javascript"></script>
+		<script src="UI/libs/jquery.tmpl.min.js" type="text/javascript"></script>
+		<script src="UI/libs/jquery-ui.min.js" type="text/javascript"></script>
+		<link href="UI/libs/jquery-ui.min.css" rel="stylesheet"></link>
 		
 		<script src="libs/lodash.min.js"></script>
 		<script src='libs/anonymousassertion.js'></script>
@@ -53,7 +53,7 @@
 
 			var botOptions = {};
 			botOptions.logLevel = 'debug';
-			botOptions.koreAPIUrl = "https://pilot-bots.kore.com/api/";
+			botOptions.koreAPIUrl = "https://devbots.kore.net/api/";
 			botOptions.bearer = "bearer xyz-------------------";
 			botOptions.assertionFn = assertion;
 			/*
@@ -66,9 +66,9 @@
 			*/
 			botOptions.test = true;
 			botOptions.koreAnonymousFn = koreAnonymousFn;
-			botOptions.clientId   = "cs-561678bc-eb01-54cb-9f10-6adbb807f6d3"; // secure client-id
+			botOptions.clientId   = "cs-2ac51307-8d11-55f4-b442-2e6e258dfd88"; // secure client-id
 
-			botOptions.botInfo = {name:"Finicity Banking Bot","_id":"st-6374761e-02fd-5311-a002-caaae37ed284"}; // bot name is case sensitive
+			botOptions.botInfo = {name:"TATA CAPITAL Personal Loan","_id":"st-65eabdd4-0fb3-5433-86cc-ef7a8c801e9f"}; // bot name is case sensitive
 			
 			var chatConfig={
 				botOptions:botOptions,
