--- a/UI/index.html
+++ b/UI/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE>
 <html>
 	<head>
+		<title>Welcome to BB&T Banking</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.1, maximum-scale=1.0">
+		<style>
+        /* For device width smaller than 400px: */
+        body {
+            background-repeat: no-repeat;
+            background-image: url('libs/images/banking-mobile.png');
+			background-size: contain; 
+        }
+
+        /* For device width 400px and larger: */
+        @media only screen and (min-device-width: 400px) {
+            body { 
+               background-image: url('libs/images/banking.png'); 
+            }
+        }
+		</style>
 		<script src="libs/jquery.js" type="text/javascript"></script>
 		<script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
 		<script src="libs/jquery-ui.min.js" type="text/javascript"></script>
@@ -19,28 +35,26 @@
 		<script type="text/javascript">
 		$(document).on("ready",function(){
 			function assertion(options, callback) {
-                 options.assertion =  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE0ODU4Nzg1MzUzMTQsImV4cCI6MTQ4NTk2NDkzNTMxNCwiYXVkIjoiaHR0cHM6Ly9pZHByb3h5LXFhLmtvcmUuY29tL2F1dGhvcml6ZSIsImlzcyI6ImNzLTJhYzUxMzA3LThkMTEtNTVmNC1iNDQyLTJlNmUyNThkZmQ4OCIsInN1YiI6InByYW1vZC5kZXNocGFuZGVAa29yZS5jb20iLCJpc0Fub255bW91cyI6dHJ1ZX0.spTGylN6hTKrrltvbHyLT6BZmmhRpkpySjofdFUPn0k";
-						callback(null, options);
+
 				// Client has to fill the claims and call the callback.
-				/*$.ajax({
+				$.ajax({
 					url: botOptions.koreAPIUrl+"users/sts",
 					type: 'post',
 					headers: {
 						Authorization: botOptions.bearer
 					},
 					dataType: 'json',
-					data: botOptions.data,
 					success: function (data) {
 						options.assertion = data.jwt
 						callback(null, options);
 					}
-				}) commented as this will be generated via API*/ 
+				})
 			}
 
 			var botOptions = {};
 			botOptions.logLevel = 'debug';
-			botOptions.koreAPIUrl = "https://devbots.kore.net/api/"; 
-			//botOptions.bearer = "bearer iZrs_PxJ6Jm7U0AlJGqdedqSJQnLrFOehRN83mcVz3GtFwiSg9uplgZBVPOiihtJ"; commented by sunitha
+			botOptions.koreAPIUrl = "https://devbots.kore.net/api/";
+			botOptions.bearer = "bearer xyz-------------------";
 			botOptions.assertionFn = assertion;
 			/*
 			 Below config:(To support the anonymous user in test environments only.)
@@ -50,10 +64,10 @@
 			 Case.2:Logged-In User
 			        a. set it to false if the client defined the assertion.
 			*/
-			//botOptions.test = true; // invalid
+			botOptions.test = true;
 			botOptions.koreAnonymousFn = koreAnonymousFn;
 			botOptions.clientId   = "cs-2ac51307-8d11-55f4-b442-2e6e258dfd88"; // secure client-id
-			
+
 			botOptions.botInfo = {name:"TATA CAPITAL Personal Loan","_id":"st-65eabdd4-0fb3-5433-86cc-ef7a8c801e9f"}; // bot name is case sensitive
 			
 			var chatConfig={
@@ -67,6 +81,7 @@
 			});
 		});
 		</script>
+        
 	</head>
 	<body>
 		<div id="chatContainer">
